Create a new Map to force the updated values to be serialized again